[package]
name = "nsproxy"
version = "0.1.0"
authors = ["Guy Bortnikov", "Shay Sandler", "Liran Ringel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
tokio = {version = "0.2", features = ["full"]}
trust-dns-proto = {version = "0.19"}
log = "0.4"
env_logger = "0.7"

[dev-dependencies]
trust-dns-client = "0.19"
